# ymb_thatuation

./: .gitignore  README.md  version.json
.github/workflows/: release.yml
installer/: setup.iss
src-csharp/: YmbThatuation.sln
src-csharp/YmbThatuation/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  YmbThatuation.csproj
src-csharp/YmbThatuation.Tests/: ExtensionsServiceTests.cs  RecipesTests.cs  UnreadParserTests.cs  YmbThatuation.Tests.csproj
src-csharp/YmbThatuation/Ipc/: IpcBridge.cs
src-csharp/YmbThatuation/Models/: Config.cs  ExtensionInfo.cs  UiInstance.cs
src-csharp/YmbThatuation/Services/: AutostartService.cs  ConfigStore.cs  DownloadNotificationWindow.cs  ExtensionsService.cs  InstanceManager.cs  MemoryService.cs  PathUtil.cs  Recipes.cs  ThemeColors.cs  Translations.cs  TrayService.cs  UnreadParser.cs  UpdateCheckService.cs  WindowStateService.cs
src-csharp/YmbThatuation/wwwroot/: i18n.js  index.html  settings.html  theme.js  welcome.html
src-csharp/YmbThatuation/wwwroot/lang/: en.json  ja.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: ctxmenu.html  i18n.js  index.html  settings.html  welcome.html
ui/lang/: en.json  ja.json
